# redis_lab

./: README.md  docker-compose.yml
consumer/: Dockerfile  pyproject.toml
consumer/config/: .env.example  __init__.py  settings.py
consumer/src/: __main__.py
consumer/src/storage/: __init__.py  cassandra.py  redis.py
consumer/src/utils/: __init__.py  uuid_generator.py
publisher/: Dockerfile  pyproject.toml
publisher/config/: .env.example  settings.py
publisher/src/: __main__.py
scripts/: logs.sh  rebuild.sh  remote.sh  restart.sh  start.sh  start_attached.sh  stop.sh
